--- a/.github/workflows/SnakeGame.yml
+++ b/.github/workflows/SnakeGame.yml
@@ -13,29 +13,16 @@ on:
 # Regras
 jobs:
   build:
+    name: Jobs to update datas
     runs-on: ubuntu-latest
     steps:
-
-    # Checks repo under $GITHUB_WORKSHOP, so your job can access it
-      - uses: actions/checkout@v2
 
     # Repositorio que será utilizado para gerar os arquivos.
       - uses: Platane/snk@master
         id: snake-gif
         with:
           github_user_name: gabbiezs
-          gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
-
-      - run: git status
-
-      # Para as atualizações.
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: master
-          force: true
 
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
